--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 :root {
   font-family: Inter;
+  background-color: #f2f2f2;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -12,4 +14,9 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
+}
+
+button {
+  font-family: inherit;
+  outline: none;
 }
