--- a/frontend/src/layouts/Header/Header.module.css
+++ b/frontend/src/layouts/Header/Header.module.css
@@ -9,4 +9,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 64px;
+}
+
+.Navigation {
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
