Добавил взаимодействие с базой данных

--- a/frontend/src/components/Background/Background.module.css
+++ b/frontend/src/components/Background/Background.module.css
@@ -4,7 +4,7 @@
   width: 200%;
   height: 100%;
   border-radius: 100%;
-  background-color: #e2e2e2;
+  background-color: #9381ff;
   left: -50%;
   z-index: -1;
 }
