--- a/frontend/src/components/ActionButton/ActionButton.module.css
+++ b/frontend/src/components/ActionButton/ActionButton.module.css
@@ -6,18 +6,18 @@
   gap: 12px;
   font-size: 13px;
   cursor: pointer;
-  padding: 8px 12px;
-  border-radius: 12px;
+  padding: 10px 20px;
+  border-radius: 24px;
   font-weight: bold;
   transition: 250ms;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 .Button:hover {
-  background-color: rgba(0, 0, 0, 0.05);
   transition: 250ms;
 }
 
 .Button:active {
   transition: 250ms;
-  background-color: rgba(0, 0, 0, 0.1);
 }
