--- a/frontend/src/layouts/Card/Card.module.css
+++ b/frontend/src/layouts/Card/Card.module.css
@@ -1,8 +1,15 @@
 .Card {
   width: 760px;
-  height: 900px;
+  min-height: 900px;
   background-color: #ffffff;
   border-radius: 24px;
   box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05),
     0px 0px 1px 0px rgba(0, 0, 0, 0.15);
+}
+
+.Content {
+  padding: 48px;
+  gap: 8px;
+  display: flex;
+  flex-direction: column;
 }
